objects/Test_DataLoader__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testField2__c</fullName>
        <label>testField2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tf1__c</fullName>
        <label>tf1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test DataLoader</label>
</CustomObject>